style: spinner getting cropped in small size fix (#1133)

--- a/apps/beeai-ui/src/components/Spinner/Spinner.module.scss
+++ b/apps/beeai-ui/src/components/Spinner/Spinner.module.scss
@@ -20,6 +20,7 @@
       block-size: 2.8rem;
       min-inline-size: 2.8rem;
       transform: translate(0, 0.1rem);
+      padding: rem(1px);
     }
   }
 
